# StackAPI-Impact

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  tox.ini
impact/: __init__.py  answered.py  impact.py
stackapi_impact/: __init__.py  answered.py  cli.py  impact.py
tests/: data.py  fixtures.py  test_answered_question.py  test_basic.py  test_calculate_impact.py  test_evaluate_answers.py  test_fetch_answered_questions.py  test_fetch_question_answers.py  test_fetch_user_answers.py  test_fetch_user_questions.py
