[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "StackAPI-Impact"
version = "1.0.1"
authors = [
  { name="Dmitry Sorokin", email="a@dimir.name" },
]
description = "Sample calculation of user's impact at Stack Exchange"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "StackAPI"
]

[project.urls]
Homepage = "https://github.com/1dimir/StackAPI-Impact"
